解决了若干头疼bug,艾特分不清等问题
